objects/BundleOfferVehicleAssociation__c.object
<CustomObject>
    <description>Junction Object to store information about saved auction and bundle offer
Process : Bundle Offer process
Jira Ticket : PC-369
Domain : Vehicle Intelligence</description>
    <fields>
        <fullName>ACV_Estimated_Price__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>ACV Estimated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Bundle_Price__c</fullName>
        <label>Adjusted Bundle Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auction_ID__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Auction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Sale_Amount__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Auction Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bundled_Offer__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Bundled Offer</label>
        <referenceTo>Bundled_Offer__c</referenceTo>
        <relationshipLabel>BundleOfferVehicleAssociations</relationshipLabel>
        <relationshipName>BundleOfferVehicleAssociations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Pricing_Bundle_Vehicle_Id__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Guaranteed Pricing Bundle Vehicle Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Auctioned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Is Auctioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <formula>Vehicle__r.make__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <formula>Vehicle__r.model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Run_Auction_Id__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Previous Run Auction Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Run_Floor_Bid__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Previous Run Floor Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Run_High_Bid__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Previous Run High Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Number__c</fullName>
        <description>Represent Number of times a Vehicle went for Auction</description>
        <label>Run Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Saved_Auction_ID__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Saved Auction ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trim__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <formula>Vehicle__r.trim__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trim</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <formula>Vehicle__r.vin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>BundleOfferVehicleAssociations</relationshipLabel>
        <relationshipName>BundleOfferVehicleAssociations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year_Make_Model_Trim__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <formula>TEXT(Vehicle__r.Year__c) &amp; &quot; &quot; &amp; Vehicle__r.make__c &amp; &quot; &quot; &amp; Vehicle__r.model__c &amp; &quot; &quot; &amp; Vehicle__r.trim__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year/Make/Model/Trim</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <formula>TEXT(Vehicle__r.Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <externalId>true</externalId>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>BundleOfferVehicleAssociation</label>
    <nameField>
        <displayFormat>BOVA-{00000}</displayFormat>
        <label>BundleOfferVehicleAssociation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BundleOfferVehicleAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>